drm/edid: Use the first-detailed-preferred quirk

Since its inception, we never used the first-detailed-preferred quirk.
The quirk tables were copied across from the xserver in

commit f453ba0460742ad027ae0c4c7d61e62817b3e7ef
Author: Dave Airlie <airlied@redhat.com>
Date:   Fri Nov 7 14:05:41 2008 -0800

    DRM: add mode setting support

but it was never enabled. So also copy the current quirk implementation
from

commit ab4bce02a9457dd9c86b774fc74caf3dd6b287ca
Author: Eric Anholt <eric@anholt.net>
Date:   Thu Oct 18 15:22:42 2007 -0700

    Add a quirk for Philips 107P5 which lacks the preferred bit on detailed timing.

    Also fix the prefer-large-75 quirk if the prefer-first-detailed bit was set,
    though it's not the case for the existing prefer-large-75 consumer.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
References: https://bugs.freedesktop.org/show_bug.cgi?id=78655
Cc: Dave Airlie <airlied@redhat.com>
Cc: Adam Jackson <ajax@redhat.com>
Cc: Eric Anholt <eric@anholt.net>